fixed x-achis scrollbar on profile page

--- a/Frontend/src/style/Profile.css
+++ b/Frontend/src/style/Profile.css
@@ -1,8 +1,6 @@
 
 .ProfilePage {
     background-image: url("../assets/ProfilePage/Background.png");
-    height: 100vh;
-    width: 100vw;
     margin: 0;
     padding: 0;
     background-color: transparent;
